Notas de aula CE342. Busca de software para séries temporais em painel. Links para ABM. Sugestões Lorena.

--- a/Materias/2S2020/PED_CE342/Aulas/Introducao.org
+++ b/Materias/2S2020/PED_CE342/Aulas/Introducao.org
@@ -1,7 +1,7 @@
 #+OPTIONS: toc:nil num:nil
 #+TITLE: Contextualização da adoção do Regime de Metas para Inflação
 #+AUTHOR: Ana Rosa Ribeiro Mendonça, Gabriel Petrini (PED)
-#+DATE: 28 de setembro de 2020
+#+DATE: 28 de setembro  e 05 de outrobro de 2020
 #+LATEX_HEADER: \usepackage[portuguese]{babel}
 #+LANG: pt_br
 
@@ -67,4 +67,82 @@ Medidas não foram suficientes para evitar aumento da dívida líquida do setor 
 
 ** Reforma Monetária
 
-*Objetivo:* 
+*Objetivo:* Eliminar  a inércia inflacionária (indexação)
+- Assincronia de reajustes de preços e rendimentos
+- *Solução:* alinhas os preços relativos por meio de um indexador universal e contemporâneo (URV, unidade de conta)
+  - Cálculo da URV era feito a partir da ponderação de índices de preços (IGP-M, IPCA e IPC)
+  - Não era o movimento cambial que definia o valor da URV, mas sim uma atuação do Banco Central para que a variação cambial fosse da mesma proporção da variação da inflação em termos de URV
+
+
+*** Âncora Monetária e âncora cambial
+
+Movimento de flexibilização a partir da adoção de bandas
+- Variantes do regime de metas cambiais
+- Manter real valorizado
+- Redução progressiva do grau de sobrevalorização
+- Política monetária muito restrita
+
+
+**** Âncora Monetária
+*Duração:* Julho de 1994 a  janeiro de 1999
+
+- Relação fixa entre câmbio e real
+- Processo de remonetização
+  - Não se verifica a estabilidade de circulação da moeda
+  - Forte crescimento da Base Monetária
+- Inconsistência conceitual
+  - BCB continuou publicar a programação monetária
+  - Flutuação da taxa de câmbio $\Rightarrow$ Valorização forte do real
+    - Para redução da inflação (e tarifas de importação) dos bens transacionáveis
+      - Isso somado à pressão pela liberalização comercial e imposição da concorrência
+      - Convergir a inflação doméstica à inflação externa
+**** Âncora cambial
+
+
+a) Flutuação cambial (Julho a setembro de 1994)
+   - Banda assimétrica anunciada
+   - BCB não interveio
+   - *Situação externa:* elevada liquidez
+   - Diminuição do imposto de importação
+b) Taxa de câmbio fixa (1US$ = 0,84 R$)
+   - BCB interveio no mercado de câmbio
+   - Setembro de 1994 a fevereiro de 1995
+   - Crise Mexicana $\Rightarrow$ reversão na liquidez internacional
+     - Perda de reservas
+c) Banda cambial deslizante
+   - Março de 1995
+   - Perda de reserva
+   - Desvalorização do real (5%)
+     - Pequenas e sucessivas desvalorizações do real
+   - Elevação do imposto de importação de alguns produtos
+   - Intervenções diárias (dentro da banda)
+d) Banda cambial rastejante
+   - Outubro de 1995 a janeiro de 1999
+   - Minibandas sistematicamente ajustadas (desvalorização do real)
+   - Fim ditado por crise cambial
+
+
+
+**** Balanço
+- Que da inflação
+- Alongamento dos prazos
+- Redução da pobreza
+- Efeitos negativos sobre as contas externas
+
+
+* De metas cambiais a metas de inflação
+
+Sistema durou mais do que o esperado
+- Piora nas contas externas
+- Manutenção do sistema dependia de atração de capitais (elevação da taxa de juros)
+  - Taxas de crescimento mais lentas
+  - Crescimento da dívida pública
+- Economia mais dependente da situação externa
+- Sequências de crises em países periféricos e efeitos sobre as condições internacionais de liquidez
+- Situação internacional + deterioração da situação doméstica $\Rightarrow$ Fuga de capitais
+  - Queda das reservas
+  - Choque de juros
+  - Empréstimo /stand by/ do FMI
+  - Janeiro de 1999: mudança do presidente do BCB
+  - Alargamento da banda cambial
+- Medidas foram insuficientes $\Rightarrow$ câmbio flutua livremente
