--- a/Materias/2S2020/PED_CE342/Aulas/Introducao.tex
+++ b/Materias/2S2020/PED_CE342/Aulas/Introducao.tex
@@ -1,4 +1,4 @@
-% Created 2020-09-28 seg 20:02
+% Created 2020-10-05 seg 11:06
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -31,20 +31,20 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \usepackage{tikz}
 \usepackage[portuguese, english]{babel}
 \author{Ana Rosa Ribeiro Mendonça, Gabriel Petrini (PED)}
-\date{28 de setembro de 2020}
+\date{28 de setembro  e 05 de outrobro de 2020}
 \title{Contextualização da adoção do Regime de Metas para Inflação}
 \begin{document}
 
 \maketitle
 
 \section*{Introdução: Debate acerca da condução da política monetária}
-\label{sec:org8e0d4c6}
+\label{sec:org7e08517}
 
 \subsection*{Regras x Discrição}
-\label{sec:org764b7b6}
+\label{sec:orgd1eb54d}
 
 \subsubsection*{Ativismo monetário (discricionarismo)}
-\label{sec:orga3d17dc}
+\label{sec:org71c50ba}
 
 \begin{itemize}
 \item Liberdade para o uso da Política Monetária diante da \uline{conjuntura econômica}
@@ -56,7 +56,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{itemize}
 
 \subsubsection*{Regras}
-\label{sec:org5a212d1}
+\label{sec:org9080a4f}
 
 \begin{itemize}
 \item Condiciona Política Monetária a objetivos preestabelecidos
@@ -68,7 +68,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{itemize}
 
 \subsection*{Regimes monetários}
-\label{sec:orga611347}
+\label{sec:org27e9307}
 
 Baseados em regras para a política monetária amparada em determinada regra (âncora)
 
@@ -87,9 +87,19 @@ Baseados em regras para a política monetária amparada em determinada regra (â
 \begin{itemize}
 \item \textbf{Meta} \(\Rightarrow\) determinada quantia de moeda
 \item \textbf{Banco Central} \(\Rightarrow\) controlar base monetária
+\begin{itemize}
+\item Os agregados monetários todos não são passíveis de controle do Banco Central, mas sim, gerida por agentes fora do sistema regulatório
+\end{itemize}
 \item Variação inadequada da quantidade de moeda \(\Rightarrow\) inflação
 \end{itemize}
 \item \textbf{Regime de metas para inflação} \(\Rightarrow\) taxa de inflação
+\begin{itemize}
+\item Maior transparência à Política Monetária e associada à pauta do Banco Central independente
+\item \textbf{Banco Central} \(\Rightarrow\) Taxa de juros de curto prazo
+\begin{itemize}
+\item Inflação não esta sob o controle do Banco Central, mas sim os juros
+\end{itemize}
+\end{itemize}
 \end{itemize}
 
 Papel na estabilidade de preços:
@@ -97,5 +107,96 @@ Papel na estabilidade de preços:
 \begin{itemize}
 \item Coordenação de expectativas de inflação
 \item Balizamento da formação de preços
+\end{itemize}
+
+\section*{Plano Real e suas fases}
+\label{sec:org0787d82}
+
+\subsection*{Ajuste Fiscal (preparação)}
+\label{sec:org882f60c}
+
+\begin{itemize}
+\item \textbf{Diagnóstico:} equilíbrio fiscal fundamental para sucesso de política de estabilidade de preços
+\begin{itemize}
+\item Relação negativa entre déficit fiscal e inflação
+\item Subavaliação da inflação na composição do orçamento e receitas indexadas
+\end{itemize}
+\item \textbf{PAI} (1993): Programa de Ação Imediata
+\begin{itemize}
+\item Desordem financeira e administrativa do setor público contribuíam para a inflação
+\item Diminuição e maior eficiência dos gastos públicos
+\item Criação do IPMF
+\end{itemize}
+\item \textbf{FSE} (1994):
+\begin{itemize}
+\item Reduzir rigidez dos gastos da união
+\item Desvincular receitas de saída, em especial com gastos sociais
+\end{itemize}
+\end{itemize}
+
+Medidas não foram suficientes para evitar aumento da dívida líquida do setor público
+
+\subsection*{Reforma Monetária}
+\label{sec:org27d68a4}
+
+\textbf{Objetivo:} Eliminar  a inércia inflacionária (indexação)
+\begin{itemize}
+\item Assincronia de reajustes de preços e rendimentos
+\item \textbf{Solução:} alinhas os preços relativos por meio de um indexador universal e contemporâneo (URV, unidade de conta)
+\begin{itemize}
+\item Cálculo da URV era feito a partir da ponderação de índices de preços (IGP-M, IPCA e IPC)
+\item Não era o movimento cambial que definia o valor da URV, mas sim uma atuação do Banco Central para que a variação cambial fosse da mesma proporção da variação da inflação em termos de URV
+\end{itemize}
+\end{itemize}
+
+
+\subsubsection*{Âncora Monetária e âncora cambial}
+\label{sec:org4537881}
+\begin{itemize}
+\item Âncora Monetária
+\label{sec:orgb955423}
+\textbf{Duração:} Julho de 1994 a  janeiro de 1999
+
+\begin{itemize}
+\item Relação fixa entre câmbio e real
+\item Processo de remonetização
+\begin{itemize}
+\item Não se verifica a estabilidade de circulação da moeda
+\item Forte crescimento da Base Monetária
+\end{itemize}
+\item Inconsistência conceitual
+\begin{itemize}
+\item BCB continuou publicar a programação monetária
+\item Flutuação da taxa de câmbio \(\Rightarrow\) Valorização forte do real
+\begin{itemize}
+\item Para redução da inflação (e tarifas de importação) dos bens transacionáveis
+\begin{itemize}
+\item Isso somado à pressão pela liberalização comercial e imposição da concorrência
+\item Convergir a inflação doméstica à inflação externa
+\end{itemize}
+\end{itemize}
+\end{itemize}
+\end{itemize}
+\item Âncora cambial
+\label{sec:org8fa9f77}
+
+\begin{itemize}
+\item Flutuação cambial (Julho a setembro de 1994)
+\begin{itemize}
+\item Banda assimétrica anunciada
+\item BCB não interveio
+\item \textbf{Situação externa:} elevada liquidez
+\item Diminuição do imposto de importação
+\end{itemize}
+\item Taxa de câmbio fixa (1US\$ = 0,84 R\$)
+\begin{itemize}
+\item BCB interveio no mercado de câmbio
+\item Setembro de 1994 a fevereiro de 1995
+\item Crise Mexicana \(\Rightarrow\) reversão na liquidez internacional
+\begin{itemize}
+\item Perda de reservas
+\end{itemize}
+\end{itemize}
+\end{itemize}
 \end{itemize}
 \end{document}
