--- a/Readings/Panel.org
+++ b/Readings/Panel.org
@@ -114,7 +114,6 @@
 }
 #+END_SRC
 
-
 ** PARTIAL [#A] [[https://www.emerald.com/insight/publication/doi/10.1016/S0731-9053(2001)15][Baltagi - Nonstationary Panels, Panel Cointegration, and Dynamic Panels: Volume 15]]
    :PROPERTIES:
    :YEAR:     2000
@@ -516,7 +515,17 @@
 }
 #+END_SRC
 
-
+** Lectures
+*** READ [#A] [[https://www.stata.com/meeting/uk11/abstracts/UK11_eberhardt.pdf][Eberhardt - Panel Time-Series Modeling]]
+   :PROPERTIES:
+   :YEAR:     2011
+   :ZOTERO:   No
+   :TYPE:     Manual
+   :STATUS:   Downloaded
+   :RELEVANCE: High
+   :IMPACT:   Regular
+   :CITE:     Wait
+   :END:    
 * [#A] Housing and House Prices
 
 ** READ [#A] [[https://www.ecb.europa.eu/pub/pdf/scpwps/ecbwp888.pdf?ec420f6e04a07efadb15fbbd5d4223e6][Goodhart and Hofmann -  House prices, money, credit and the macroeconomy]]
@@ -570,6 +579,12 @@
    :IMPACT:   Low
    :CITE:     No
    :END:    
+
+** READ [#B] [[https://cran.r-project.org/web/packages/plm/vignettes/plmPackage.html][R-plm]]
+
+* Data
+
+** [[https://sites.google.com/site/medevecon/devecondata/macro?authuser=0][Eberhardt - Macrodata survey
 
 * HTML headers                                              :noexport:ignore:
 
