Continuando levantamento bibliográfico ABM. Nota de reunião com Felipe. Fichamento texto base lorena. Lista de presença turma C

--- a/Materias/2S2020/PED_CE342/Aulas/Introducao.org
+++ b/Materias/2S2020/PED_CE342/Aulas/Introducao.org
@@ -146,3 +146,11 @@ Sistema durou mais do que o esperado
   - Janeiro de 1999: mudança do presidente do BCB
   - Alargamento da banda cambial
 - Medidas foram insuficientes $\Rightarrow$ câmbio flutua livremente
+
+* Para as próximas aulas
+
+** TODO Abrir atividade Turma A
+   DEADLINE: <2020-10-06 ter 09:30>
+
+** TODO Abrir atividade Turma C
+   DEADLINE: <2020-10-05 seg 09:30>
