--- a/Orientacoes/Felipe/Reunioes.org
+++ b/Orientacoes/Felipe/Reunioes.org
@@ -96,3 +96,77 @@ con [label="Mudança na\ngovernança corporativa e o\ninvestimento"]
 *** TODO Github para poetas
 *** TODO Latex monografia
 *** TODO Link Zotero
+
+* Reunião <2020-10-07 qua 19:00>
+
+Na nossa última reunião, combinamos discutir os objetivos da monografia a partir de um parágrafo preliminar. Segue abaixo (grifos meus):
+
+#+BEGIN_QUOTE
+Esse trabalho tem como objetivo estudar o *fenômeno da financeirização* para as economias periféricas, *em especial as da América Latina*. Partindo da _noção de que a financeirização_  tem assumido um papel de crescente importância na determinação da _realidade econômica desses países_, o *trabalho visa analisar a financeirização* sob a óptica da destinação de _lucros e receitas_ das firmas, partindo da hipótese de que a mudança de sua premissa, agora voltada a gerar valor para os acionistas, tem por consequência uma alteração dos níveis e _padrões de investimento_ macroeconômico. Por meio da análise e _testagem_ para algumas métricas dos _dados_ de investimento agregado e de balanço das firmas de capital societário, o trabalho pretende verificar se essa hipótese se confirma e em que medida.
+#+END_QUOTE
+
+
+** Destrinchando
+
+- Estudar o fenômeno da financeirização: de que forma?
+  - Empiricamente, conceitualmente, historicamente, etc
+- Ou é para as economias periféricas ou é para América Latina
+  - Os dois na mesma frase distancia o leitor do seu objeto
+- Alguns conceitos pouco rigorosos (excesso de adjetivos)
+  - Noção de que a financeirização ... $\Rightarrow$ A financeirização tem um papel crescente ...
+  - Determinação da realidade econômica $\Rightarrow$ Crescimento? Distribuição? Estabilidade? Sustentatibilidade ... ser mais preciso
+- *Importante:* O trabalho visa analisar a financeirização sob a óptica ... Isso já é outro objetivo
+- *Hipótese:* Financeirização $\Rightarrow$ Alteração dos níveis e padrão de investimento
+  - Sobre a hipótese: isso tem mais cara de justificativa... (comentário/dúvida)
+  - A hipótese é sobre a mudança da premissa (quebra) ou sobre a destinação do lucro ("pós-quebra", mudança da premissa como dada)
+    - Isso será importante para o recorte temporal
+  - Por que nível e não crescimento?
+  - O que quer dizer por "padrões de investimento"? Volatilidade? Composição? Especificar melhor
+  - Mais adiante, você restringiu ainda mais (o que é bom) o objeto, mas está longe (na posição do texto) da definição dos objetivos
+    - Amostra: Economias periféricas? Países da América Latina? Firmas de capital societário de economias periféricas/América Latina?
+- Testagem não diz muito
+  - Adiante há outro objetivo $\Rightarrow$ Verificar se essa hipótese se confirma...
+
+** Dicas e sugestões
+
+  - Apresentar a hipótese o mais cedo possível
+  - Um único objetivo geral e alguns objetivos específicos
+    - A estrutura de capítulos te ajuda nesse ponto
+      - Pontuar as diferentes dimensões da financeirização
+      - Adequar alguns dados à amostra
+      - Proposta (métricas)
+  - Mais rigor e menos adjetivos
+  - Incluir: perspectiva comparada
+    - Conforme conversamos em reunião (gravado), esse ponto é bem importante
+  - As variáveis (ex Lucros e Receitas) e métricas a serem utilizadas precisam não precisam aparecer nos objetivos, mas sim na *metodologia*
+  - Estrutura (sugestão, reforço)
+    - Objetivo
+    - Recorte (países, tempo)
+    - Hipótese
+    - Relevância (Este item pode aparecer primeiro também)
+  - Dar maior ênfase às outras dimensões (apenas uma foi abordada)
+    - Sobre demanda agregada
+    - Preço dos ativos
+    - Dica (para o futuro): Mudanças na demanda agregada $\Rightarrow$ Efeitos econômicos (crescimento/nível de investimento) $\Leftrightarrow$ Outras dimensões da financeirização
+
+
+** Para a próxima reunião <2020-10-14 qua 19:00>
+
+*** TODO Novo parágrafo(s) sobre objetivos (geral e específico)
+
+*** TODO Pesquisar dados sobre bolsa de valores na América Latina (mais urgente)
+
+- Possível caminho alternativo: separação entre propriedade e gerência está na raiz da geração do valor ao acionista
+  - Bolsas na AL podem não ser significativas, mas as matrizes não são locais. Logo, a remessa de lucros para o exterior é geração de valor ao acionista não doméstico
+- Isso é importante para a viabilidade da monografia
+- Conforme sugerido em reunião, textos do Sarti, Laplane e Alex Whillians podem ajudar
+
+
+*** TODO Contatar Mariano
+
+*** TODO Checar se é possível doutorando orientar dois alunos
+
+*** TODO Ver adequabilidade do texto passado pelo Lucas (Gabriel)
+- Levantamento bibliográfico sobre separação entre propriedade e gerência (Felipe)
+   - Foco menor na financeirização
+- Isso é importante na adequação dos dados, menos urgente mas pode ter mais literatura
