--- a/Readings/Mortgaging.org
+++ b/Readings/Mortgaging.org
@@ -375,6 +375,20 @@
   publisher    = {Springer Netherlands}
 }
 #+END_SRC
+** MAYBE [#B] [[https://www.amazon.com.br/Handbook-Mortgage-Backed-Securities-7th/dp/0198785771][Fabozzi - The Handbook of Mortgage-Backed Securities]]
+   :PROPERTIES:
+   :YEAR:    2017
+   :ZOTERO:   Entry
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
 
 * [#A] Institutions 
 ** READ [#A] [[http://policydialogue.org/files/publications/Determinants_of_Banking_Crises.pdf][Demirgüç-Kunt and Detragiache - The Determinants of Banking Crises in Developing and Developed Countries]]
@@ -505,8 +519,78 @@
 }
 #+END_SRC
 
+** READ [#A] [[https://onlinelibrary.wiley.com/doi/10.1002/9781444317978.ch18][Green and Wachter - The Housing Finance Revolution]]
+   :PROPERTIES:
+   :YEAR:     2010
+   :ZOTERO:   Yes
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:
 
-* [#A] Mortgage Market
+#+BEGIN_SRC bibtex
+@Article{Green_2010,
+  author       = {Green, Richard K. and Wachter, Susan M.},
+  title	       = {The Housing Finance Revolution},
+  year	       = {2010},
+  month	       = {Apr},
+  pages	       = {414–445},
+  doi	       = {10.1002/9781444317978.ch18},
+  url	       = {http://dx.doi.org/10.1002/9781444317978.ch18},
+  isbn	       = 9781405192156,
+  journal      = {The Blackwell Companion to the Economics of Housing},
+  publisher    = {Wiley-Blackwell}
+}
+#+END_SRC
+
+** MAYBE [#A] [[https://www.asres2007.um.edu.mo/papers/178%20-%20PAPER.pdfLink][Cho - 180 Years’ Evolution of the US Mortgage Banking System: Lessons for Emerging Mortgage Markets]]
+   :PROPERTIES:
+   :YEAR:     2006
+   :ZOTERO:   Partial
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
+
+* [#A] Mortgage Market (Comparative)
+** READ [#C] [[https://www.jstor.org/stable/24825878?seq=1][Wachter - The limits of the housing finance system]
+   :PROPERTIES:
+   :YEAR:     1990
+   :ZOTERO:   Entry
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
+
+** SKIM [#C] [[https://www.jstor.org/stable/24833781?seq=1][Order - The U.S. Mortgage Market: A Model of Dueling Charters]]
+   :PROPERTIES:
+   :YEAR:    2000
+   :ZOTERO:   Entry
+   :TYPE:     Theory
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
+
 ** READ [#A] [[https://academic.oup.com/ser/advance-article/doi/10.1093/ser/mwaa030/5913145][Kohl - Too much mortgage debt? The effectof housing financialization on housingsupply and residential capital formation]]
    :PROPERTIES:
    :YEAR:     2020
@@ -530,7 +614,6 @@
   publisher    = {Oxford University Press (OUP)}
 }
 #+END_SRC
-
 
 ** PARTIAL [#B] [[https://escholarship.org/content/qt41d5k3bd/qt41d5k3bd.pdf][Quigley - Federal Credit and Insurance Programs: Housing]] :USA:
    :PROPERTIES:
@@ -619,41 +702,57 @@
    :END:    
 
 *Zotero file:* muc0070.pdf
-* [#A] Housing Bubbles
-** PARTIAL [#A] [[https://papers.ssrn.com/sol3/papers.cfm?abstract_id=846305#][Borio et al - Asset Prices, Financial and Monetary Stability: Exploring the Nexus]] :BIS:
+** SKIM [#A] [[https://onlinelibrary.wiley.com/doi/10.1002/9781444317978.ch3][Klyuev and Mills - Is Housing Wealth an “ATM”?: International Trends]]
    :PROPERTIES:
-   :YEAR:     2005
-   :ZOTERO:   Yes
-   :TYPE:     Theory
+   :YEAR:     2010
+   :ZOTERO:   Entry
+   :TYPE:     Empirical
    :STATUS:   Filed
-   :RELEVANCE: High
-   :IMPACT:   High
-   :CITE:     Yes
+   :RELEVANCE: Regular
+   :IMPACT:   Low
+   :CITE:     Wait
    :END:    
-* [#A] Housing cycle
-** PARTIAL [#A] [[https://www.nber.org/papers/w23694][Kaplan et al - The Housing Boom and Bust: Model Meets Evidence]]
+** SKIM [#C] [[https://onlinelibrary.wiley.com/doi/abs/10.1002/9781118929421.ch22][Englund - Milestones in Swedish Housing Finance]]
    :PROPERTIES:
-   :YEAR:     2017
+   :YEAR:    2016
    :ZOTERO:   Yes
    :TYPE:     Case
-   :STATUS:   Skimmed
-   :RELEVANCE: High
-   :IMPACT:   Regular
-   :CITE:     Yes
-   :END:    
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
 
-#+BEGIN_SRC bibtex
-@Article{Kaplan_2017,
-  author       = {Kaplan, Greg and Mitman, Kurt and Violante,
-                  Giovanni},
-  title	       = {The Housing Boom and Bust: Model Meets Evidence},
-  year	       = 2017,
-  month	       = {Aug},
-  doi	       = {10.3386/w23694},
-  url	       = {http://dx.doi.org/10.3386/w23694},
-  publisher    = {National Bureau of Economic Research}
+   #+BEGIN_SRC bibtex
+@Article{Englund_2016,
+  author       = {Englund, Peter},
+  title	       = {Milestones in Swedish Housing Finance},
+  year	       = 2016,
+  month	       = {Jan},
+  pages	       = {375–391},
+  doi	       = {10.1002/9781118929421.ch22},
+  url	       = {http://dx.doi.org/10.1002/9781118929421.ch22},
+  isbn	       = 9781118929452,
+  journal      = {Milestones in European Housing Finance},
+  publisher    = {John Wiley & Sons, Ltd}
 }
-#+END_SRC
+   #+END_SRC
+
+** READ [#A] [[https://ideas.repec.org/p/vic/vicewp/0201.html][Courchane and Giles - A Comparison of U.S. and Canadian Residential Mortgage Markets]]
+   :PROPERTIES:
+   :YEAR:    2002
+   :ZOTERO:   Yes
+   :TYPE:     Empirical
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
+
 * [#A] Banking credit
 ** READ [#A] [[https://academic.oup.com/restud/advance-article-abstract/doi/10.1093/restud/rdaa040/5889963?redirectedFrom=fulltext][Jordà et al - Bank Capital Redux: Solvency, Liquidity and Crisis]]
    :PROPERTIES:
@@ -708,37 +807,6 @@
 }
 #+END_SRC
 
-* [#A] Household debt 
-** PARTIAL [#A] [[https://doi.org/10.1146/annurev-economics-080614-115640][Zinman -  Household Debt: Facts, Puzzles, Theories, and Policies]]
-   :PROPERTIES:
-   :YEAR: 2015
-   :ZOTERO:   Yes
-   :TYPE:     Review
-   :STATUS:   Downloaded
-   :RELEVANCE: Regular
-   :IMPACT:   Low
-   :CITE:     Wait
-   :END:    
-
-#+BEGIN_SRC bibtex
-@Article{Zinman_2015,
-  author       = {Zinman, Jonathan},
-  title	       = {Household Debt: Facts, Puzzles, Theories, and
-                  Policies},
-  year	       = 2015,
-  volume       = 7,
-  number       = 1,
-  month	       = {Aug},
-  pages	       = {251–276},
-  issn	       = {1941-1391},
-  doi	       = {10.1146/annurev-economics-080614-115640},
-  url	       =
-                  {http://dx.doi.org/10.1146/annurev-economics-080614-115640},
-  journal      = {Annual Review of Economics},
-  publisher    = {Annual Reviews}
-}
-#+END_SRC
-
 * [#A] Varieties of (?)
 ** READ [#A] [[https://linkinghub.elsevier.com/retrieve/pii/S0049089X16304756][Guten and Navot - Varieties of indebtedness: Financialization and mortgage market institutions in Europe]]
    :PROPERTIES:
@@ -766,7 +834,6 @@
 }
 #+END_SRC
 
-
 ** READ [#A] [[https://link.springer.com/chapter/10.1057%2F9780230280441_1][Schwartz and Seabrooke - Varieties of Residential Capitalism in the International Political Economy: Old Welfare States and the New Politics of Housing]]
    :PROPERTIES:
    :YEAR:     2009
@@ -790,7 +857,37 @@
 }
 #+END_SRC
 
-* [#A] House prices
+** READ [#A] [[https://www.econstor.eu/bitstream/10419/155335/1/880367393.pdf][Blackwell and Khol - Varieties of housing finance in historical perspective: The impact of mortgage finance systems on urban structures and homeownership]]
+   :PROPERTIES:
+   :YEAR:     2017
+   :ZOTERO:   Yes
+   :TYPE:     Empirical
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Yes
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
+
+* [#A] House prices (Comparative)
+** SKIM [#C] [[https://www.jstor.org/stable/44103516?seq=1][Malpezzi and Wachter - The Role of Speculation in Real Estate Cycles]]
+   :PROPERTIES:
+   :YEAR:     2005
+   :ZOTERO:   Entry
+   :TYPE:     Theory
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
+
 ** PARTIAL [#C] [[https://www.kansascityfed.org/PUBLICAT/ECONREV/PDF/2q07rapp.pdf][Rappaport - A Guide to Aggregate House Price Measures]]   :USA:
    :PROPERTIES:
    :YEAR: 2007
@@ -932,8 +1029,32 @@
    :CITE:     No
    :END:    
 * [#A] Mortgage interest rate
+** SKIM [#C] [[http://www.empirica-international.de/mediapool/16/169624/data/Housing_Finance/Europe/Duebel_VdP_Fixed-Rate_Mortgages_and_Prepayment_in_Europe_05.pdf][Duebel - Fixed-rate Mortgages and Prepayment in Europe (mimeo)]]
+   :PROPERTIES:
+   :YEAR:     2005
+   :ZOTERO:   No
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:    
+** PARTIAL [#C] [[http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.360.2923&rep=rep1&type=pdf][Miles - The UK mortgage market: Taking a longer-term view]]
+   :PROPERTIES:
+   :YEAR:    2004
+   :ZOTERO:   Yes
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Regular
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+   #+END_SRC
+
 * [#A] Financial crisis
-** SKIM [#B] [[https://doi.org/10.1080/00076791.2013.800967][Blancheton et al - The French paradox: A financial crisis during the golden age of the 1960s]] :France:
+** MAYBE [#C] [[https://doi.org/10.1080/00076791.2013.800967][Blancheton et al - The French paradox: A financial crisis during the golden age of the 1960s]] :France:
    :PROPERTIES:
    :YEAR: 2014
    :ZOTERO:   Entry
@@ -976,6 +1097,16 @@
    :CITE:     Wait
    :END:    
 
+** SKIM [#C] [[https://www.aeaweb.org/articles?id=10.1257/jep.11.3.139][Benston and Kaufman  - FIDICIA After Five Years]]
+   :PROPERTIES:
+   :YEAR:     1997
+   :ZOTERO:   Yes
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Regular
+   :CITE:     Wait
+   :END:
 
 ** SKIM [#B] [[https://www.bis.org/statistics/totcredit.htm][Long Series on Credit to Private Non-financial Sectors]]
 ** READ [#B] [[https://ideas.repec.org/a/jre/issued/v32n12010p23-46.html][LaCour-Little et al - Home Equity Extraction by Homeowners: 2000-2006]]
@@ -1117,6 +1248,50 @@ FIX BIB
    :IMPACT:   Regular
    :CITE:     Wait
    :END:    
+
+** SKIM [#C] [[https://escholarship.org/uc/item/4x0357n0;][Jaffee - Reforming the U.S. Mortgage Market Through Private Market Incentives]]
+   :PROPERTIES:
+   :YEAR:     2011
+   :ZOTERO:   Entry
+   :TYPE:     Empirical
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Regular
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
+** PARTIAL [#A] [[https://www.huduser.gov/portal/publications/pdf/US_evolution.pdf][Cho - Evolution of the U.S. Housing Finance System: A Historical Survey and Lessons for Emerging Mortgage Markets]]
+   :PROPERTIES:
+   :YEAR:     2004
+   :ZOTERO:   No
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
+
+** MAYBE [#C] [[https://www.oecd.org/finance/financial-markets/1844710.pdfLink][Konishi (OECD) - 1The GHLC Reform andJapanese Housing Finance Market]]
+   :PROPERTIES:
+   :YEAR:     2002
+   :ZOTERO:   Partial
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
 
 * HTML headers                                              :noexport:ignore:
 
