--- a/Readings/Panel.bib
+++ b/Readings/Panel.bib
@@ -161,6 +161,21 @@
   publisher    = {Elsevier BV}
 }
 
+@Article{Burdisso_TSPanelEvolution_2016,
+  author       = {Burdisso, Tamara and Sangiácomo, Máximo},
+  title	       = {Panel Time Series: Review of the Methodological Evolution},
+  year	       = {2016},
+  volume       = {16},
+  number       = {2},
+  month	       = {Jun},
+  pages	       = {424–442},
+  issn	       = {1536-8734},
+  doi	       = {10.1177/1536867x1601600210},
+  url	       = {http://dx.doi.org/10.1177/1536867X1601600210},
+  journal      = {The Stata Journal: Promoting communications on statistics and Stata},
+  publisher    = {SAGE Publications}
+}
+
 @Article{Labra_Lillo_2018,
   author       = {Labra Lillo, Romilio and Torrecillas, Celia},
   title	       = {Estimating dynamic Panel data. A practical approach to perform long panels.},
