--- a/Readings/Panel.org
+++ b/Readings/Panel.org
@@ -734,7 +734,23 @@
 
 * Data
 
-** [[https://sites.google.com/site/medevecon/devecondata/macro?authuser=0][Eberhardt - Macrodata survey
+** [[https://sites.google.com/site/medevecon/devecondata/macro?authuser=0][Eberhardt - Macrodata survey]]
+
+** SKIM [#A] [[https://www.oecd-ilibrary.org/economics/the-future-of-housing-policy-scenarios_0adf02cb-en][Cournède et al - The Future of Housing: Policy Scenarios]]
+   :PROPERTIES:
+   :YEAR:     2020
+   :ZOTERO:   Yes
+   :TYPE:     Empirical
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
+
 
 * HTML headers                                              :noexport:ignore:
 
