--- a/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
+++ b/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
@@ -1,7 +1,7 @@
-% Created 2020-09-28 seg 18:16
+% Created 2020-10-09 sex 19:39
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
-  \usepackage{csquotes}
+  \usepackage{csquotes, caption}
 \usepackage[brazilian, ]{babel}
 \usetheme{default}
 \author{PED: Gabriel Petrini}
@@ -16,9 +16,9 @@
 
 
 \section{Introdução}
-\label{sec:orgebb7be3}
+\label{sec:orgfee4e1f}
 
-\begin{frame}[label={sec:orgea892ef}]{Estrutura de tópicos e convenções}
+\begin{frame}[label={sec:orgf53fa8f}]{Estrutura de tópicos e convenções}
 A aula terá a seguinte estrutura
 
 \begin{itemize}
@@ -34,9 +34,9 @@ A aula terá a seguinte estrutura
 \end{frame}
 
 \section{O cenário internacional, o setor externo e a herança maldita}
-\label{sec:org9ebeb44}
+\label{sec:org12c75d3}
 
-\begin{frame}[label={sec:orged7c95f}]{Panorama Internacional}
+\begin{frame}[label={sec:org51cb1ae}]{Panorama Internacional}
 \begin{itemize}
 \item Crise Mexicana (1994/5)
 \item Brasileira (1998/9)
@@ -44,7 +44,7 @@ A aula terá a seguinte estrutura
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8fcab17}]{Crescimento e desequilíbrios globais}
+\begin{frame}[label={sec:orgee6c1ab}]{Crescimento e desequilíbrios globais}
 Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâmico e desequiblibrado entre 2002/3 a 2007/8
 
 \alert{Engrenagem comercial com 3 elos}
@@ -67,7 +67,7 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org905963f}]{A Herança Maldita}
+\begin{frame}[label={sec:org01f57a0}]{A Herança Maldita}
 \begin{itemize}
 \item Instabilidade macroeconômica
 \begin{itemize}
@@ -85,9 +85,9 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 
 
 \section{Governos Lula e suas fases}
-\label{sec:org255c49f}
+\label{sec:orgf2f86e9}
 
-\begin{frame}[label={sec:orgfe8d9cb}]{Primeira Fase}
+\begin{frame}[label={sec:org89020f5}]{Primeira Fase}
 Experimento desenvolvimentista junto de uma política macroeconômica conservadora:
 \begin{itemize}
 \item Continuidade do tripé
@@ -105,7 +105,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \alert{Contexto de transição complexa:} desconfiança dos credores e pressões financeiras
 \end{frame}
 
-\begin{frame}[label={sec:orga7524e0}]{Segunda fase}
+\begin{frame}[label={sec:org0a99b08}]{Segunda fase}
 \begin{itemize}
 \item Retomada do Estado como elemento condutor do Crescimento
 \item Desenho da política fiscal no centro de proposta do desenvolvimento
@@ -116,7 +116,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{frame}
 
 
-\begin{frame}[label={sec:org3f22dd1}]{Fatores determinantes}
+\begin{frame}[label={sec:org4744f6a}]{Fatores determinantes}
 \begin{itemize}
 \item Impulsos externos favoráveis
 \begin{itemize}
@@ -137,7 +137,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org324a5e8}]{Alguns resultados}
+\begin{frame}[label={sec:orgb7fece7}]{Alguns resultados}
 \begin{itemize}
 \item Queda da taxa de desemprego aberta
 \item Valorização real do salário mínimo
@@ -156,9 +156,9 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 
 
 \section{(Des)Continuidades e dificuldades}
-\label{sec:org0a1a69a}
+\label{sec:org53956e8}
 
-\begin{frame}[label={sec:org4252b8d}]{Continuidades}
+\begin{frame}[label={sec:org151f19d}]{Continuidades}
 \begin{block}{Política cambial}
 Pouco mudou ao longo do tempo
 
@@ -190,7 +190,7 @@ Não foi alterado o regime fiscal definido na era FHC
 \end{frame}
 
 
-\begin{frame}[label={sec:org91e5804}]{Descontinuidades}
+\begin{frame}[label={sec:org9e2855b}]{Descontinuidades}
 Conjugação de políticas de incentivo à renda e ao mercado interno
 
 \begin{itemize}
@@ -210,7 +210,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:org8cc027d}]{Dificuldades}
+\begin{frame}[label={sec:org8ad6c51}]{Dificuldades}
 \begin{itemize}
 \item Limites do crescimento com expansão da demanda de consumo via crédito e políticas sociais
 \item Retomada da taxa de investimento, mas nível baixo
@@ -223,12 +223,12 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 \section{Governo(s?) Dilma}
-\label{sec:org9d884be}
+\label{sec:orga47a162}
 
-\begin{frame}[label={sec:org1950323}]{Os três tenores}
+\begin{frame}[label={sec:orgd9166f1}]{Os três tenores}
 \end{frame}
 
-\begin{frame}[label={sec:org86d2719}]{Medidas macroprudenciais}
+\begin{frame}[label={sec:orgec4495d}]{Medidas macroprudenciais}
 \alert{Medidas macroprudenciais:*} Redução do crescimento do crédito.
 
 \begin{itemize}
@@ -249,7 +249,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:org2d7b038}]{Desaceleração rudimentar I}
+\begin{frame}[label={sec:org3764534}]{Desaceleração rudimentar I}
 \begin{center}
 \begin{tabular}{lll}
 \hline
@@ -264,7 +264,7 @@ Taxa de desemprego & 9.0\% & 5.4\%\\
 \alert{Principal mudança:} do incentivo à demanda agregada ao incetivo ao investimento privado.
 \end{frame}
 
-\begin{frame}[label={sec:org17f9fa7}]{Desaceleração rudimentar II}
+\begin{frame}[label={sec:org516dd4d}]{Desaceleração rudimentar II}
 \begin{table}[htbp]
 \caption{Consumo das famílias}
 \centering
@@ -280,7 +280,7 @@ Renda disponível real das famílias & 5,3\% & 1,2\%\\
 \end{table}
 \end{frame}
 
-\begin{frame}[label={sec:org6a41466}]{Desaceleração rudimentar III}
+\begin{frame}[label={sec:orgaa70703}]{Desaceleração rudimentar III}
 \begin{table}[htbp]
 \caption{Política fiscal}
 \centering
@@ -296,78 +296,87 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org41550d0}]{Prêambulo para a ópera do fim do mundo}
+\begin{frame}[label={sec:orga4b1767}]{Prêambulo para a ópera do fim do mundo}
 \href{./opera.jpg}{Brasil, o Golpe: A Ópera do fim do mundo - Flávio Tavares}
 \end{frame}
 
 \section{Idade das trevas}
-\label{sec:org7f7de19}
+\label{sec:org347f1a9}
 
 \section{Dados}
-\label{sec:org0406469}
+\label{sec:orgfbb3ce7}
 
-\begin{frame}[label={sec:orge8af774}]{Índice EMBI Brasil (Fim de período)}
+
+\begin{frame}[label={sec:orge7410d9}]{Índice EMBI Brasil (Fim de período)}
 \end{frame}
 
-\begin{frame}[label={sec:orgda8308b}]{O ciclo das commodities}
-\alert{Dado:} Índice de Commodities (CRB)
+
+
+\begin{frame}[label={sec:orgb4a5093}]{O ciclo das commodities}
+\begin{figure}[htb]
+\centering
+\caption{Índice de Commodities - Brasil\\Média móvel 12 meses} 
+\includegraphics[width = .9\textwidth]{./figs/Commodities.png}
+\caption*{\textbf{Fonte:} BCB-Depec}
+\end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgec1c9cb}]{O ciclo de liquidez internacional para países emergentes}
+
+\begin{frame}[label={sec:org623e7bd}]{O ciclo de liquidez internacional para países emergentes}
 \alert{Dado:} IIF (?)
 \end{frame}
 
-\begin{frame}[label={sec:org0827417}]{Evolução das reservas internacionais líquidas}
+\begin{frame}[label={sec:org5f2c293}]{Evolução das reservas internacionais líquidas}
 \end{frame}
 
-\begin{frame}[label={sec:org2b46afb}]{PIB puxado pelo mercado doméstico}
+\begin{frame}[label={sec:org163e8a5}]{PIB puxado pelo mercado doméstico}
 \alert{Dado:} Decomposição do crescimento (doméstico e exportações líquidas)
 \end{frame}
 
-\begin{frame}[label={sec:orge6e9835}]{Crescimento e o investimento induzido}
+\begin{frame}[label={sec:orgf92839b}]{Crescimento e o investimento induzido}
 \alert{Dado:} Decomposição do crescimento (Todos os componentes da demanda)
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb7869df}]{Crédito total}
+\begin{frame}[label={sec:org43c3a62}]{Crédito total}
 \end{frame}
 
-\begin{frame}[label={sec:org96cb915}]{Emprego}
+\begin{frame}[label={sec:org48eb068}]{Emprego}
 \alert{Dado:} EVOLUÇÃO DO NÚMERO TOTAL DE EMPREGADOS COM VÍNCULO FORMAL  DE EMPREGO - MTE/RAAIS
 \end{frame}
 
 
-\begin{frame}[label={sec:org50cec5a}]{Evolução do salário mínimo real}
+\begin{frame}[label={sec:org3b3d345}]{Evolução do salário mínimo real}
 \end{frame}
 
-\begin{frame}[label={sec:org965e855}]{Consumo das famílias}
+\begin{frame}[label={sec:org77de168}]{Consumo das famílias}
 \end{frame}
 
-\begin{frame}[label={sec:orgca109c8}]{Investimento público em recuperação}
+\begin{frame}[label={sec:orgd1e9208}]{Investimento público em recuperação}
 \alert{Dado:} Taxa de investimento público (\%PIB)
 \end{frame}
 
-\begin{frame}[label={sec:org101e787}]{A evolução favorável da dívida pública}
+\begin{frame}[label={sec:orgbae9273}]{A evolução favorável da dívida pública}
 \alert{Dado:} Evolução da dívida bruta e líquida (\%PIB)
 \end{frame}
 
-\begin{frame}[label={sec:org640ec85}]{Superávit primário}
+\begin{frame}[label={sec:org1724963}]{Superávit primário}
 \end{frame}
 
-\begin{frame}[label={sec:org67219f0}]{Relação dívida externa líquida}
+\begin{frame}[label={sec:org9dcc1d6}]{Relação dívida externa líquida}
 \end{frame}
 
 
-\begin{frame}[label={sec:org5c05320}]{Taxa de câmbio nominal}
+\begin{frame}[label={sec:org1d5647c}]{Taxa de câmbio nominal}
 \end{frame}
 
-\begin{frame}[label={sec:org96ff818}]{Taxa de juros selic}
+\begin{frame}[label={sec:org65502a9}]{Taxa de juros selic}
 \end{frame}
 
-\begin{frame}[label={sec:org2856375}]{Preços livres vs Administrados}
+\begin{frame}[label={sec:org52259c3}]{Preços livres vs Administrados}
 \end{frame}
 
-\begin{frame}[label={sec:orgd3b30e0}]{Finalmente, inflação (ops, IPCA)}
+\begin{frame}[label={sec:orgc676766}]{Finalmente, inflação (ops, IPCA)}
 \alert{Dado:} IPCA, centro da meta e limites
 \end{frame}
 \end{document}
