--- a/Orientacoes/Lorena/Reunioes.org
+++ b/Orientacoes/Lorena/Reunioes.org
@@ -1,3 +1,4 @@
+
 #+OPTIONS: num:nil
 #+TITLE: Reuniões de Orientação - Lorena
 #+AUTHOR: Gabriel Petrini
@@ -11,9 +12,7 @@
 #+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.min.js"></script>
 #+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/readtheorg/js/readtheorg.js"></script>
 
-* Reunião <2020-10-06 ter>
-
-** Proposta de estrutura de capítulos
+* Proposta de estrutura de capítulos
 
 #+BEGIN_SRC dot :file capitulos.png
 digraph {
